code/infra/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core
  namespace: healthcare
  labels:
    app.kubernetes.io/name: core
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: core
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
